# linglux

./: .gitignore  AGENTS.md  DESIGN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/editor/: ExportDialog.vue  InspectorPanel.vue  LingluxEditor.vue  MediaBin.vue  PreviewMonitor.vue  TimelinePanel.vue
src/lib/: editorProject.ts
src/types/: editor.ts
