[package]
name = "linglux"
version = "0.1.0"
description = "Linglux desktop application"
authors = ["Linglux"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "linglux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
